package com.shigu.main4.activity.beans;

import com.shigu.main4.activity.service.Activity;
import com.shigu.main4.activity.vo.GoatActivityVO;

/**
 * 广告售卖活动
 * Created by zhaohongbo on 17/5/4.
 */
public abstract class GoatActivity extends GoatActivityVO implements Activity {
}
