package com.shigu.main4.activity.beans;

import com.shigu.main4.activity.service.Activity;
import com.shigu.main4.activity.vo.LedActivityVO;

/**
 * LED报名活动
 * Created by zhaohongbo on 17/5/4.
 */
public abstract class LedActivity extends LedActivityVO implements Activity {
}
