package com.shigu.main4.spread.enums;

/**
 * 广告、活动类别
 * Created by zhaohongbo on 17/5/3.
 */
public enum SpreadType {
    GOAT_SELL,//广告售卖活动
    GOAT_LED//led大屏报名活动
}
