@startuml

enum SpreadType{
GOAT_SELL:广告售卖
GOAT_LED:led活动
}

note left of SpreadType:活动类别

class SpreadTerm{
-Date startTime
-Date endTime
-Long termId
-SpreadType type

+Long throwSpread() //投放广告
}

note left of SpreadTerm:活动期次

interface SpreadActivity{
boolean limit() //活动限制
Long joinSpread(Long userId,String name,String phone) //参加活动
List<SpreadEnlist> randomHit(Integer number) //随机命中
List<SpreadEnlist> selEnlist(Boolean hit) //查询报名列表
}

note left of SpreadActivity:投放的活动,\n一期里面可能\n投放多个活动

abstract class GoatActivity{
}

class ActivityVO{
-Long activityId  //投放ID
-Long termId   //期次
-String description //描述
-Date pubFromTime  //公布时间
-Date pubToTime   //公布结束时间
-Integer sort  //排序
}

class GoatActivityVO{
-Long goatId
-String code
}

abstract class LedActivity{
}

class LedActivityVO{
-Date givePicTime
-Date endGivePicTime
}

abstract class SpreadEnlist{
-Long enId
-Long userId
-Long activityId
-String name
-String telephone

+void prepareHit() //预定
+void hit() //报名命中
}

class SpreadEnlistVO{
-Long enId
-Long userId
-Long activityId
-String name
-String telephone
}

interface SpreadFactory{
SpreadTerm selTermByTime(SpreadType type,Date time) //按时间查有效期次
SpreadActivity selActivityById(Long activityId) //按期次ID查投放的广告
SpreadActivity selActivityByVo(ActivityVO vo) //按期次ID查投放的广告
SpreadEnlist selEnlistById(Long enlistId) //按广告投放ID查报名单
SpreadEnlist selEnlistByVo(SpreadEnlistVO vo) //按广告投放ID查报名单

}

note left of SpreadFactory:活动服务接口
SpreadActivity <|.. GoatActivity

SpreadActivity <|.. LedActivity

SpreadTerm *-- SpreadActivity

GoatActivity <--> SpreadEnlist
LedActivity <--> SpreadEnlist
SpreadFactory --o SpreadEnlistVO
SpreadFactory --o ActivityVO
ActivityVO <|-- LedActivityVO
ActivityVO <|-- GoatActivityVO

LedActivityVO <|-- LedActivity
GoatActivityVO <|-- GoatActivity
SpreadEnlist --|> SpreadEnlistVO
@enduml